--- a/projects.css
+++ b/projects.css
@@ -17,7 +17,6 @@ main {
 .project-image {
 	display: block;
 	width: 80%;
-	overflow: auto;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 12px;
